src/test/deca/syntax/valid/homemade/lexer/test/test_lex_val_espaces.deca
// Description:
//    Programme minimaliste testant les espaces.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 01/01/2023

{
        println(     "Hello");
}
