src/test/deca/syntax/invalid/homemade/test/test_pars_inv_intruction_mult_expr_oubli_expr2_mul.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les mult_expr
//
// Resultats:
//    Ligne 11 : Erreur ( oubli expr2)
//    
//
// Historique:
//    cree le 04/01/2023
{
    expression_bidon1 *;
}
